sticky navs and overflow fix

--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -1,3 +1,7 @@
+h1 {
+    margin-top: 5em;
+}
+
 form {
     width: 100%;
 }
