--- a/src/app/nav/nav.component.scss
+++ b/src/app/nav/nav.component.scss
@@ -1,5 +1,10 @@
 header {
     background: #7700FF;
+    position: fixed;
+    top: 0;
+    right: 0; 
+    left: 0;
+
     div.container {
         p {
             margin: 0;
